# dungeon

./: Cargo.toml  justfile
crates/client/: Cargo.toml
crates/client/frontend/bevy/: Cargo.toml
crates/client/frontend/bevy/src/: app.rs  components.rs  events.rs  input.rs  lib.rs  provider.rs  resources.rs
crates/client/frontend/bevy/src/rendering/: actors.rs  mod.rs  tiles.rs
crates/client/frontend/bevy/src/ui/: mod.rs  panels.rs  styles.rs
crates/client/src/: main.rs
crates/game/core/src/: provider.rs
