[workspace]
members = [
    "crates/game/core",
    "crates/game/content",
    "crates/runtime",
    "crates/zk",

    # Client binary and sub-crates
    "crates/client",
    "crates/client/bootstrap",
    "crates/client/frontend/core",
    "crates/client/frontend/cli",
    "crates/client/frontend/bevy",
    "crates/client/blockchain/sui",

    "crates/xtask",
    "crates/behavior-tree",
]
resolver = "2"

# ============================================================================
# Workspace Dependencies
# ============================================================================
# Central dependency management for version consistency and easier maintenance.
# Each crate can use these with: dependency = { workspace = true }
# ============================================================================

[workspace.dependencies]
# ----------------------------------------------------------------------------
# Internal Crates
# ----------------------------------------------------------------------------
# All internal crates use default-features = false for explicit feature control.
# Only binary crates (dungeon-client) should have default features.
game-core = { path = "crates/game/core" }
game-content = { path = "crates/game/content" }
behavior-tree = { path = "crates/behavior-tree" }
runtime = { path = "crates/runtime", default-features = false }
zk = { path = "crates/zk", default-features = false }
client-bootstrap = { path = "crates/client/bootstrap", default-features = false }
client-frontend-core = { path = "crates/client/frontend/core", default-features = false }
client-frontend-cli = { path = "crates/client/frontend/cli", default-features = false }
client-frontend-bevy = { path = "crates/client/frontend/bevy", default-features = false }
client-blockchain-sui = { path = "crates/client/blockchain/sui", default-features = false }

# ----------------------------------------------------------------------------
# Async Runtime
# ----------------------------------------------------------------------------
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# ----------------------------------------------------------------------------
# Serialization
# ----------------------------------------------------------------------------
# Note: serde without default-features is used in game-core for no_std support
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = "1.0"
# NOTE: bincode 1.3 pinned for compatibility with risc0-zkvm 3.0
# Do not upgrade to bincode 2.0 until risc0-zkvm supports it
bincode = "1.3"

# ----------------------------------------------------------------------------
# Error Handling
# ----------------------------------------------------------------------------
thiserror = "2"
anyhow = "1.0"

# ----------------------------------------------------------------------------
# Logging & Tracing
# ----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# ----------------------------------------------------------------------------
# Data Structures (no_std compatible)
# ----------------------------------------------------------------------------
bounded-vector = { version = "0.3", default-features = false }
arrayvec = { version = "0.7", default-features = false }
bitflags = { version = "2.10", default-features = false }
strum = { version = "0.26", default-features = false, features = ["derive"] }

# ----------------------------------------------------------------------------
# Cryptography (no_std compatible)
# ----------------------------------------------------------------------------
sha2 = { version = "0.10", default-features = false }

# ----------------------------------------------------------------------------
# ZK Dependencies
# ----------------------------------------------------------------------------
# RISC0 zkVM
risc0-zkvm = "3.0"
risc0-build = "3.0"
risc0-groth16 = "3.0"

# SP1 zkVM
sp1-sdk = { version = "5.2", features = ["network"] }
sp1-build = "5.2"
sp1-verifier = "5.2"

# ----------------------------------------------------------------------------
# Terminal UI (client only)
# ----------------------------------------------------------------------------
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# ----------------------------------------------------------------------------
# Game Engine (Bevy frontend)
# ----------------------------------------------------------------------------
bevy = { version = "0.15", default-features = false }

# ----------------------------------------------------------------------------
# Utilities
# ----------------------------------------------------------------------------
directories = "6.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# ----------------------------------------------------------------------------
# Development & Testing
# ----------------------------------------------------------------------------
tempfile = "3.23.0"
hex = "0.4"
