[package]
name = "client-frontend-bevy"
version = "0.1.0"
edition = "2024"

[features]
default = []
risc0 = ["client-bootstrap/risc0"]
stub = ["client-bootstrap/stub"]
sp1 = ["client-bootstrap/sp1"]
arkworks = ["client-bootstrap/arkworks"]

# Blockchain integration
sui = ["dep:client-blockchain-sui", "runtime/sui"]

[dependencies]
# Core dependencies
game-core = { workspace = true }
runtime = { workspace = true }
client-frontend-core = { workspace = true }
client-bootstrap = { workspace = true }

# Bevy engine
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "x11",
] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Optional blockchain dependencies
client-blockchain-sui = { workspace = true, optional = true }
